# agent-bulletin

./: .gitignore  LICENSE  README.md  agent_bulletin_mcp_server.py  agent_mail_mcp_server.py  architecture.md  motivation.md  pyproject.toml  test_smoke.py  webui.py
.github/workflows/: test.yml
agent_bulletin/: __init__.py  store.py
agent_mail/: __init__.py  store.py
tests/: conftest.py  test_integration.py  test_store.py
