[project]
name = "agent-bulletin"
version = "0.1.0"
description = "A tiny Redis-backed per-project news feed for AI agents, exposed via MCP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Benjamin Nassler", email = "ben@brandmachine.shop" }
]

dependencies = [
    "mcp>=0.5.0",
    "fastmcp>=0.7.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["agent_bulletin"]
